⌨️ code(header): Add website Header (with styles)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <center style="background-color: black">
+      <h1 class="header1">Discover hidden places in the world around you</h1>
     </center>
   </body>
 </html>
