⌨️ code(app): Add download links for App

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <center style="background-color: black">
       <h1 class="header1">Discover hidden places in the world around you</h1>
+      <p>
+        <a class="cta" href="#"><b>Download Excursion (Coming soon!)</b></a>
+      </p>
+      <p>
+        <a class="cta" href="#"><b>Download Excursion (Coming soon!)</b></a>
+      </p>
     </center>
   </body>
 </html>
