✨ feat(video): Add sample app usage video

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <p>
         <a class="cta" href="#"><b>Download Excursion (Coming soon!)</b></a>
       </p>
+
+      <video src="resources/Videos/excursion.mp4" autoplay muted loop></video>
+
       <p>
         <a class="cta" href="#"><b>Download Excursion (Coming soon!)</b></a>
       </p>
