--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
       <video src="resources/Videos/excursion.mp4" autoplay muted loop></video>
 
+      <h2 class="header2">Your personal travel guide</h2>
+      <p class="header3">
+        <b>
+          Excursion remembers places you like, and recommends new points of
+          interest around you.
+        </b>
+      </p>
+
+      <h2 class="header2">Coming Soon for iPhone and Android</h2>
       <p>
         <a class="cta" href="#"><b>Download Excursion (Coming soon!)</b></a>
       </p>
