✨ feat(images): Add image elements for looks

--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
         </b>
       </p>
 
+      <p><img src="resources/Images/camp.webp" /></p>
+      <p><img src="resources/Images/phone.webp" /></p>
+
       <h2 class="header2">Coming Soon for iPhone and Android</h2>
       <p>
         <a class="cta" href="#"><b>Download Excursion (Coming soon!)</b></a>
       </p>
+
     </center>
   </body>
 </html>
