⌨️ code(footer): Add footer

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <a class="cta" href="#"><b>Download Excursion (Coming soon!)</b></a>
       </p>
 
+      <p class="header3" style="font-size: 20px; text-align: right">
+        &copy; Excursion
+      </p>
     </center>
   </body>
 </html>
