🔨 refactor(css): Update stylings and refactoring

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <center style="background-color: black">
-      <h1 class="header1">Discover hidden places in the world around you</h1>
+      <h1>Discover hidden places in the world around you</h1>
       <p>
-        <a class="cta" href="#"><b>Download Excursion (Coming soon!)</b></a>
+        <a href="#"><b>Download Excursion (Coming soon!)</b></a>
       </p>
 
       <video src="resources/Videos/excursion.mp4" autoplay muted loop></video>
 
-      <h2 class="header2">Your personal travel guide</h2>
-      <p class="header3">
+      <h2>Your personal travel guide</h2>
+      <p>
         <b>
           Excursion remembers places you like, and recommends new points of
           interest around you.
@@ -26,14 +26,12 @@
       <p><img src="resources/Images/camp.webp" /></p>
       <p><img src="resources/Images/phone.webp" /></p>
 
-      <h2 class="header2">Coming Soon for iPhone and Android</h2>
+      <h2>Coming Soon for iPhone and Android</h2>
       <p>
-        <a class="cta" href="#"><b>Download Excursion (Coming soon!)</b></a>
+        <a href="#"><b>Download Excursion (Coming soon!)</b></a>
       </p>
 
-      <p class="header3" style="font-size: 20px; text-align: right">
-        &copy; Excursion
-      </p>
+      <p class="footer">&copy; Excursion</p>
     </center>
   </body>
 </html>
